# Dendrite

./: README.md  package-lock.json  package.json  product.json
crates/: Cargo.toml
crates/dendrite_core/: Cargo.toml
crates/dendrite_core/src/: export.rs  git.rs  lib.rs  session.rs  storage.rs  visualization.rs
docs/: build-book.md
docs/design/: phosphor-icons-migration.md
docs/design/paradigms/: README.MD  abstract-expressionism.mdc  art-deco.mdc  atomic.mdc  aurora.mdc  bauhaus.mdc  biomorphic.mdc  brutalistic.mdc  cartoon-grotesque.mdc  claymorphic.mdc  daylight.mdc  duotone.mdc  fitts.mdc  flat.mdc  glassomorphic.mdc  impressionism.mdc  isometric.mdc  japandi.mdc  kinetic.mdc  liquid.mdc  material.mdc  maximalism.mdc  memphis.mdc  minimalist.mdc  modernism.mdc  monochroism.mdc  neo-geo.mdc  neomorphic.mdc  organic.mdc  papermorphic.mdc  pop-art.mdc  postmodern.mdc  retro-futurism.mdc  scandinavian.mdc  skeuomorphic.mdc  spatial.mdc  surrealism.mdc  swiss.mdc  test_prompt.txt  vaporware.mdc
docs/design/paradigms/examples/: claude-opus-4.5.md  google-gemini-3.md  multi-chain-examples.md
docs/judge/: design.xml
docs/judge/systems/: local-first.xml  state-management.xml
scripts/: build-dendrite.sh  build-rust.sh
src/vs/editor/: editor.all.ts
src/vs/editor/contrib/dendriteCursor/browser/: dendriteCursor.contribution.ts  smoothCursor.ts
src/vs/platform/telemetry/common/: telemetryService.ts
src/vs/workbench/: workbench.common.main.ts
src/vs/workbench/contrib/dendrite/browser/: dashboardView.ts  dendrite.contribution.ts  gitIntegrationService.ts  (+6 more)
(+52 files in other folders)
