[package]
name = "dendrite_core"
version.workspace = true
edition.workspace = true
description = "Rust/WASM core engine for Dendrite learning IDE"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid = { version = "1.0", features = ["v4", "js", "serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
